--- a/src/assets/sass/photogrid.scss
+++ b/src/assets/sass/photogrid.scss
@@ -10,12 +10,13 @@
 .pcolumn {
     img {
         width: 100%;
-        margin-top: 4px;
+        margin-top: 10px;
         vertical-align: middle;
+        box-shadow: inset 0 1px 0px #dcffa6, 0 1px 3px #000;
     }
     flex: 1;
     max-width: 30%;
-    padding: 0 2px;
+    padding: 0 5px;
 }
 
 
