--- a/src/assets/sass/video.scss
+++ b/src/assets/sass/video.scss
@@ -1,9 +1,10 @@
 iframe {
-    width: 100%;
+    width: 90%;
     height: 500px;
     border: none;
 }
 
 #video section {
+    text-align: center;
     padding-bottom: 0;
 }
