--- a/src/assets/sass/footer.scss
+++ b/src/assets/sass/footer.scss
@@ -1,6 +1,9 @@
 footer {
-    // background-color: bisque;
-    padding: 60px 30px;
+    margin: 50px 50px 0 0;
+    padding: 50px 10px 50px 100px;
+    background-color: #eaeaea;
+    // box-shadow: 2px -2px 10px -4px;
+    // border-top-right-radius: 30px;
     
     .footer {
         display: flex;
