--- a/src/assets/sass/photogrid.scss
+++ b/src/assets/sass/photogrid.scss
@@ -8,15 +8,18 @@
 
 /* Create four equal columns that sits next to each other */
 .pcolumn {
-    img {
-        width: 100%;
-        margin-top: 10px;
-        vertical-align: middle;
-        box-shadow: inset 0 1px 0px #dcffa6, 0 1px 3px #000;
-    }
     flex: 1;
     max-width: 30%;
     padding: 0 5px;
+    .thumbnail {
+        width: 100%;
+        margin-top: 10px;
+        vertical-align: middle;
+        // box-shadow: inset 0 1px 0px #dcffa6, 0 1px 3px #000;
+    }
+    .thumbnail:hover {
+        box-shadow: 1px 0px 5px #767676;
+    }
 }
 
 
