--- a/src/assets/sass/service.scss
+++ b/src/assets/sass/service.scss
@@ -1,5 +1,5 @@
 #services {
-    // background-color: #ca8b88;
+    background-color: #f2f2f2;
     // color: #eee;
 }
 
@@ -11,7 +11,7 @@
         width: 50%;
         height: 50vh;
         object-fit: cover;
-        box-shadow: inset 0 2px 0px #dcffa6, 0 2px 5px #000;
+        box-shadow: 1px 0px 5px #767676;
     }
 
     .service__desc {
