--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@
 $primaryFont: "Josefin Sans", sans-serif;
 
 * {
-  box-sizing: border-box; 
+  box-sizing: border-box;
   margin: 0;
   font-size: 14px;
   font-family: $primaryFont;
@@ -45,6 +45,7 @@ main {
   position: fixed;
   top: 0;
   width: 100%;
+  opacity: 0.9;
 }
 
 .heading {
@@ -65,4 +66,15 @@ section {
 
 .page {
   padding: 0 15%;
+}
+
+@media screen and (max-width: 576px) {
+  .page {
+    padding: 0 5%;
+  }
+  
+  section {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
 }
