--- a/src/assets/sass/footer.scss
+++ b/src/assets/sass/footer.scss
@@ -1,7 +1,7 @@
 footer {
     margin: 50px 50px 0 0;
-    padding: 50px 10px 50px 100px;
-    background-color: #eaeaea;
+    padding: 50px 10px 50px 90px;
+    background-color: #e8e8e8;
     // box-shadow: 2px -2px 10px -4px;
     // border-top-right-radius: 30px;
     
