--- a/src/assets/sass/service.scss
+++ b/src/assets/sass/service.scss
@@ -1,33 +1,44 @@
 #services {
-    background-color: #f2f2f2;
+    background-color: #e8e8e8;
     // color: #eee;
 }
 
-.service {
+
+.service, .work {
     display: flex;
     padding: 40px 5%;
-
+    
     img {
         width: 50%;
         height: 50vh;
         object-fit: cover;
-        box-shadow: 1px 0px 5px #767676;
-    }
-
-    .service__desc {
-        padding-left: 10px;
-        h3 {
-            font-size: 1.7rem;
-            font-weight: 600;
-        }
-        p {
-            font-size: 1.2rem;
-            color: #444;
-        }
     }
 }
 
-.service:nth-child(odd) {
+.work {
+    img {
+        box-shadow: 5px -5px 0px #bfbfbf;
+    }
+
+    img:hover {
+        cursor: pointer;
+        box-shadow: 5px -5px 0px #afafaf;
+    }
+}
+
+.service__desc, .work__desc {
+    padding-left: 10px;
+    h3 {
+        font-size: 1.7rem;
+        font-weight: 600;
+    }
+    p {
+        font-size: 1.2rem;
+        color: #444;
+    }
+}
+
+.service:nth-child(odd), .work:nth-child(odd) {
     flex-direction: row-reverse;
     padding: 40px 5%;
 
@@ -35,20 +46,27 @@
         padding-left: 0;
         padding-right: 10px;
     }
+
+    .work__desc {
+        padding-left: 0;
+        padding-right: 10px;
+    }
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-    .service:nth-child(odd) {
-        display: block;
-        img {
-            width: 100%;
-        }
-    }
-    .service:nth-child(even) {
+    .service:nth-child(odd), .work:nth-child(odd) {
         flex-direction: column-reverse;
         img {
             width: 100%;
+            margin-top: 10px;
+        }
+    }
+    .service:nth-child(even), .work:nth-child(even) {
+        flex-direction: column-reverse;
+        img {
+            width: 100%;
+            margin-top: 10px;
         }
     }
 }
